code for calibration and changes in clinical paper draft

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Elsevier}
 }
 
+@article{vickers2009psavelocity,
+  title={Systematic review of pretreatment prostate-specific antigen velocity and doubling time as predictors for prostate cancer},
+  author={Vickers, Andrew J and Savage, Caroline and O'Brien, M Frank and Lilja, Hans},
+  journal={Journal of Clinical Oncology},
+  volume={27},
+  number={3},
+  pages={398},
+  year={2009},
+  publisher={American Society of Clinical Oncology}
+}
+
 @article{partin1993use,
   title={The use of prostate specific antigen, clinical stage and Gleason score to predict pathological stage in men with localized prostate cancer},
   author={Partin, Alan W and Yoo, John and Carter, H Ballentine and Pearson, Jay D and Chan, Daniel W and Epstein, Jonathan I and Walsh, Patrick C},
@@ -62,6 +73,17 @@ number={3},
 pages={809--834},
 year={2004},
 publisher={Institute of Statistical Science, Academia Sinica}
+}
+
+@article{epsteinGG2014,
+  title={The 2014 International Society of Urological Pathology (ISUP) consensus conference on Gleason grading of prostatic carcinoma},
+  author={Epstein, Jonathan I and Egevad, Lars and Amin, Mahul B and Delahunt, Brett and Srigley, John R and Humphrey, Peter A},
+  journal={The American journal of surgical pathology},
+  volume={40},
+  number={2},
+  pages={244--252},
+  year={2016},
+  publisher={Wolters Kluwer}
 }
 
 
