--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -14,6 +14,7 @@
 
 \usepackage{graphicx}
 \usepackage{svg}
+\usepackage{booktabs}
 %\usepackage[swedish, english]{babel}
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -93,11 +94,19 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \include{mainmatter/introduction}
+%Intro: 546 words
+%Cumsum: 546 words
 \include{mainmatter/study_cohort}
+%Study cohort: 200 words
+%Cumsum: 746 words
 \include{mainmatter/stat_analysis}
+%Stat analysis: 783 words
+%Cumsum: 1529
 \include{mainmatter/result}
 \include{mainmatter/discussion}
 \include{mainmatter/conclusion}
+%Conclusion: 131 words
+%Cumsum: 1660
 
 \section*{Acknowledgments}
 This work was supported by the Movember Foundation. The funder did not play any role in the study design, collection, analysis or interpretation of data, or in the drafting of this paper. The first and last Authors would like to acknowledge support by Nederlandse Organisatie voor Wetenschappelijk Onderzoek (the national research council of the Netherlands) VIDI grant nr. 016.146.301, and Erasmus University Medical Center funding.
