--- a/report/clinical/mainmatter/conclusion.tex
+++ b/report/clinical/mainmatter/conclusion.tex
@@ -1,3 +1,3 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Conclusions}
-We developed a novel methodology for scheduling biopsies to detect Gleason~$\geq$~7 (GS7) in PCa patients enrolled in AS. Our methodology consolidates a patient's entire history of PSA and repeat biopsies, and baseline characteristics into risk profile of GS7 over his follow-up period. It then utilizes this risk profile to schedule biopsies in a personalized manner. The personalized schedule is updated as more patient data is gathered over follow-up. To assist patients in making the choice of the best biopsy schedule, we provided them personalized burden (time and total biopsies), and personalized benefit (less time delay in detection of GS7 is beneficial), for both personalized and currently used schedules. Lastly, we implemented this approach in a web-application.
+We developed a novel methodology for personalized scheduling of biopsies, to detect reclassification (increase in Gleason grade from grade~1 to 2 or higher) in active surveillance prostate cancer patients. Personalized schedules utilize personalized risk of reclassification. Our model predicts this risk using a patient's whole history of PSA, repeat biopsy results and baseline characteristics. Our methodology is time-dynamic because it updates the personalized schedules as more patient data is gathered over follow-up. To assist patients and doctors in making the choice of a suitable biopsy schedule, we provide them estimates of personalized burden (time and total biopsies), and personalized benefit (time delay in detection of reclassification; lesser is beneficial), for both personalized and currently used schedules. Our methodology is available for use in practice at \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}.
