--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,9 +1,11 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed personalized schedules for repeat biopsies in PCa patients enrolled in AS programs. These schedules were based on a patient's risk for having a Gleason~$\geq$~7 (GS7). Patient- and visit-specific risks of GS7 were estimated using their entire history of PSA and repeat biopsies, and baseline characteristics. Consequently, the personalized schedules were updated as more data was gathered over follow-up. Risk calculators for GS7 are not new \citep{coley2017prediction,ankerst2015precision}. However, the novelty of our work is that we developed a methodology for scheduling personalized biopsies using those risks, and also a methodology to compare schedules, be it personalized or fixed, in simple terms of burden and benefit. More specifically, for each schedule we provided patients the times of biopsy and total biopsies (burden), and the time delay in detection of GS7 (less is beneficial) expected due to that schedule. We also implemented our methodology in a web-application.
+We developed personalized schedules of biopsies for active surveillance (AS) prostate cancer patients. These schedules utilize a patient's risk of reclassification (increase in biopsy Gleason grade \citep{epsteinGG2014} from grade~1 to 2 or higher). Reclassification risk calculators are not new \citep{coley2017prediction,ankerst2015precision}. However, our work has three novel features. First, we personalized the risk of reclassification and it to schedule biopsies in a personalized manner. Second, we developed a methodology to assist patients and doctors to compare and choose between personalized and fixed schedules. Specifically, for each schedule we provided the timing and total number of biopsies (burden), and the expected time delay in detecting reclassification (smaller is beneficial). Third, we implemented our methodology in a web-application: \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}.
 
-The proposed joint model accounted for the complex correlation structure that exists between longitudinal PSA measurements and time of GS7 of a patient. It also accounted for PSA measurements that were missing in patients who obtained GS7. This model adjusts the risks of GS7 upon a negative repeat biopsy. Thus complete patient information in consolidated into a single patient risk profile. Our model is fitted to the world's largest PCa AS program, PRIAS. We also externally validated our model predictions for GS7 in five largest AS cohorts that are part of the GAP3 database \citep{gap3_2018}. We found that the AUC for predictions of GS7 over the follow-up period (Figure~\ref{fig:auc_pe}) was similar in external cohorts and PRIAS (internal validation). The RMSPE however was similar to PRIAS only for Memorial Sloan Kettering Cancer Center and Johns Hopkins cohorts. Given the large size of the latter two cohorts, we expect that our model and the methodology will be useful to a large number of AS patients. Extending our model and methodology in other cohorts only requires fitting the model to their AS dataset.
+Our risk prediction model was a joint model \citep{rizopoulos2012joint,tsiatis2004joint}, fitted to the world's largest AS dataset, PRIAS. This model consolidated all available patient data, that is, historical PSA measurements and biopsy results, and baseline characteristics, into a single reclassification risk profile. This personalized risk profile and corresponding personalized schedules were updated as more patient data became available over follow-up.
 
-The clinical implications of our work are as follows. The median survival time for GS7 is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:npmle_plot}). That is, more than 50\% of AS patients do not require any biopsy during the first ten years of follow-up. We hope that our work will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. Many AS programs still utilize a rigorous schedule of yearly biopsies \citep{nieboer2018active}. However, with concerns about non-compliance and burden of biopsies \citep{bokhorst2015compliance}, the availability of our web based tool may encourage patients and doctors to consider personalized schedules.
+We externally validated our model predictions for reclassification in five largest AS cohorts that are part of the GAP3 database \citep{gap3_2018}. We found that the AUC for predictions of GS7 over the follow-up period (Figure~\ref{fig:auc_pe}) was similar in external cohorts and PRIAS (internal validation). The RMSPE however was similar to PRIAS only for Memorial Sloan Kettering Cancer Center and Johns Hopkins cohorts. Given the large size of the latter two cohorts, we expect that our model and the methodology will be useful to a large number of AS patients. Extending our model and methodology in other cohorts only requires fitting the model to their AS dataset.
 
-Our work has certain limitations. The proposed model is valid only for the first ten years of follow-up in PRIAS, whereas GS7 may occur much later in many patients. Due to this issue, we could schedule biopsies only for the first ten years follow-up. In addition, the calibration and discrimination measures of predictions were also less accurate in later follow-up periods. These problems can be mitigated by refitting the model as more follow-up data is gathered in PRIAS. While we focused only on GS7, it is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology to schedule biopsies, and to estimate the consequences of following a schedule need not change. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging (MRI). Currently, this data is very sparsely available in the PRIAS dataset. However, in future, adding this information in our model is trivial. This is because modeling correlation for extra outcomes, mainly entails connecting sub-models for the outcomes to shared random effects (see Figure~\ref{fig:jm_blockdiag}). Our model can also be used to schedule MRI scans, since they are expensive in developing countries.
+The clinical implications of our work are as follows. The median survival time for reclassification is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:npmle_plot}). That is, more than 50\% of AS patients do not require any biopsy during the first ten years of follow-up. We hope that our work will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. Many AS programs still utilize a rigorous schedule of yearly biopsies \citep{nieboer2018active}. However, with concerns about non-compliance and burden of biopsies \citep{bokhorst2015compliance}, the availability of our web based tool may encourage patients and doctors to consider personalized schedules.
+
+Our work has certain limitations. The proposed model is valid only for the first ten years of follow-up in PRIAS, whereas reclassification may occur much later in many patients. In addition, model predictions were less accurate in later follow-up period due to lack of training data. These problems can be mitigated by refitting the model with new follow-up data in future. Although, we focused only on reclassification, it is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging (MRI). Currently, this data is very sparsely available in the PRIAS dataset. However, in future, our model can be extended by adding the new biomarkers as predictors.
